Fix styling bug - Add opacity to contact elements - Remove header width that was causing it to overflow on mobile screen - Remove border radius from header paragraph - Skip header paragraph animation - Hide mobile overflow-x

--- a/scss/pcss.scss
+++ b/scss/pcss.scss
@@ -34,7 +34,6 @@ a {
   align-items: center;
   border-bottom: 5px solid $black;
   @include mobile {
-    width: 100vw;
     height: 80vh;
   }
   @include tablet {
@@ -74,13 +73,11 @@ a {
   }
   p {
     position: absolute;
-    opacity: 0;
     left: 0;
     right: 0;
     text-align: center;
     color: $brown;
     border: 5px solid $black;
-    border-radius: 0 0 30px 30px;
     z-index: 2;
 
     @include mobile {
@@ -143,6 +140,7 @@ section.list {
     @include mobile {
       width: 100%;
       padding: 1.5rem;
+      overflow-x: hidden;
     }
     @include tablet {
       width: 60vw;
@@ -240,6 +238,15 @@ section.daily-ui {
 }
 .ui-comp {
   opacity: 0;
+}
+
+.contact-info {
+  form {
+    opacity: 0;
+  }
+  .socials {
+    opacity: 0;
+  }
 }
 
 @include daily-ui-mix;
